Frontend: Fix boxes alignement

--- a/skybid-frontend/src/app/app.component.css
+++ b/skybid-frontend/src/app/app.component.css
@@ -79,21 +79,21 @@ font-weight: bold;
     font-weight: lighter;
 }
 
-.operators{
+.section{
     margin-top: 50px;
 }
 
-.operator-title{
+.section-title{
     text-align: center;
     color: var(--darkblue)
 }
 
-.operator-text{
+.section-text{
     width: 50%;
    margin: auto;
 }
 
-.operators img{
+.section img{
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -102,12 +102,16 @@ font-weight: bold;
     margin-bottom: 40px;
 }
 
-.operator-row1{
+.row1{
     display: flex;
     text-align: center;
     justify-content: space-between;
     gap:30px;
     margin-bottom : 20px
+}
+
+.box{
+    width: 50%
 }
 
 .box:hover{
@@ -116,13 +120,13 @@ font-weight: bold;
     color: var(--white)
 }
 
-.operator-row2{
+.row2{
     display: flex;
     text-align: center;
     justify-content: space-between;
     gap:30px
 }
 
-.operators p{
+.section p{
     font-weight: lighter;
 }
